tests/lean/302.lean
def f(y:m 0:=a-t):=f a
